--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,21 @@
 /* https://tailwindcss.com/docs/installation */
 /* test note to see if compiler is working properly */
+
+/* imported from here: https://fonts.google.com/specimen/Nunito?query=Nunito#standard-styles */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;        /* tailwind directive */
 @tailwind components;  /* tailwind directive */
 @tailwind utilities;   /* tailwind directive */
+
+.card {
+  @apply bg-white rounded overflow-hidden shadow-lg relative;
+}
+
+.badge {
+  @apply bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2
+}
+
+.btn {
+  @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider;
+}
